objects/Player__c.object
<CustomObject>
    <fields>
        <fullName>Capture_Team__c</fullName>
        <label>Capture Team</label>
        <referenceTo>Capture_Team__c</referenceTo>
        <relationshipLabel>Players</relationshipLabel>
        <relationshipName>Players</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Players</relationshipLabel>
        <relationshipName>Players</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research &amp; Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PlayerOwnerName__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PlayerOwnerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Value__c</fullName>
        <formula>CASE( TEXT(Power__c), &quot;High&quot;, 65, &quot;Medium&quot;, 25, &quot;Low&quot; , 10, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power__c</fullName>
        <label>Project Power Level</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority1__c</fullName>
        <formula>0.5 *  Power_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority2__c</fullName>
        <formula>0.35 *  Power_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority3__c</fullName>
        <formula>0.15 *  Power_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Champion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pen Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>(Priority1__c ) + (Priority2__c ) +(Priority3__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Priority_1__c</fullName>
        <label>Value Priority 1</label>
        <picklist>
            <picklistValues>
                <fullName>Operational availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low operational cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-time completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low cost/price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rapid payback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Execution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Priority_2__c</fullName>
        <label>Value Priority 2</label>
        <picklist>
            <picklistValues>
                <fullName>Operational availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low operational cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-time completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low cost/price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rapid payback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Execution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Priority_3__c</fullName>
        <label>Value Priority 3</label>
        <picklist>
            <picklistValues>
                <fullName>Operational availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low operational cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-time completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low cost/price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rapid payback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Execution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Player</label>
    <nameField>
        <displayFormat>PN-{0000}</displayFormat>
        <label>Player Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Players</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Priority_Check</fullName>
        <active>true</active>
        <description>R4 - Priority Check for Value Priority 1, Value Priority 2, Value Priority 3</description>
        <errorConditionFormula>if( AND(  AND( (TEXT(Value_Priority_1__c) &lt;&gt;  TEXT(Value_Priority_2__c) ),  (TEXT(Value_Priority_1__c) &lt;&gt;   TEXT(Value_Priority_3__c)) )  , (TEXT(Value_Priority_2__c) &lt;&gt;   TEXT(Value_Priority_3__c)) ), False, True )</errorConditionFormula>
        <errorMessage>Please choose different values for Value Priority 1, Value Priority 2, Value Priority 3.</errorMessage>
    </validationRules>
</CustomObject>